2021-10-11  6.9.12-26  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.12-27 GIT revision 16....

2021-10-11  6.9.12-26  <quetzlzacatenango@image...>
  * fix connected component abort trap (reference
    https://github.com/ImageMagick/ImageMagick/issues/4372).
  * fix possible unitialized values (reference
    https://github.com/ImageMagick/ImageMagick/issues/4379).

2021-10-10  6.9.12-25  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.12-25 GIT revision 16849:2c96ab5d0:20211010

2021-10-03  6.9.12-25  <quetzlzacatenango@image...>
  * improved algorithm for automatic calculation of pointsize for caption and
    labels.
  * support -auto-orient option in the identify utlity.
  
2021-10-03  6.9.12-24  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.12-24 GIT revision 16842:f6fdd0321:20211003

2021-10-03  6.9.12-24  Dirk Lemstra <dirk@lem.....org>
  * improved algorithm for automatic calculation of word breaks and pointsize
    for caption and labels.

2021-09-19  6.9.12-24  <quetzlzacatenango@image...>
  * improve wrapping between words and within words (reference
    https://github.com/ImageMagick/ImageMagick/discussions/4227).

2021-09-18  6.9.12-23  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.12-23 GIT revision 16818:bd9fb58de:20210918

2021-09-17  6.9.12-23  Dirk Lemstra <dirk@lem.....org>
  * Check for `null` in InvokeDelegate() (reference
    https://github.com/ImageMagick/ImageMagick/issues/4225).

2021-09-12  6.9.12-22  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.12-22 GIT revision 16809:ae88f07cd:20210912

2021-09-11  6.9.12-22  Dirk Lemstra <dirk@lem.....org>
  * Fixed incorrect check when module is used as the domain in policy.xml
    that could allow the use of a disabled module. (reference
    https://github.com/ImageMagick/ImageMagick/security/advisories/GHSA-qvhr-jj4p-j2qr).

2021-09-06  6.9.12-22  <quetzlzacatenango@image...>